<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">想家视频电话</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">帐号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="updatepassword">修改密码</string>
    <string name="pleaseInput_phoneNumber">请输入手机号</string>
    <string name="pleaseInput_verificationCode">请输入验证码</string>
    <string name="TestGetCode">获取验证码</string>
    <string name="pleaseInput_password">请输入密码</string>
    <string name="pleaseInput_password2">请输入新密码</string>
    <string name="confirm_password">请再次输入密码</string>
    <string name="not_Invitation_code">无推荐人可以不填</string>
    <string name="referee_hint">请输入推荐人手机号码</string>
    <string name="referee">推荐人</string>
    <string name="setPassword">设置6到16位密码,建议数字和字母的组合</string>
    <string name="commit">提交</string>
    <string name="right">确定</string>
    <string name="IP">IP地址</string>
    <string name="PORT">端口</string>
    <string name="Attn">联系人</string>
    <string name="no_internet">网络不给力，请检测网络设置</string>
    <string name="add">添加</string>
    <string name="AddAttn">添加联系人</string>
    <string name="Allphoto">所有图片</string>
    <string name="updateattn">编辑联系人</string>
    <string name="compile">编辑</string>
    <string name="ok_finish">保存</string>
    <string name="set_head">设置头像</string>
    <string name="selector_photo">选择照片</string>
    <string name="take_photos">拍照</string>
    <string name="select_locale">从本地选择</string>
    <string name="RichScan_QRcode">扫一扫二维码图案，下载App</string>
    <string name="send_contact">发送联系人到机顶盒</string>
    <string name="getLuckyMoney">我的红包</string>
    <string name="videotape">录制视频</string>
    <string name="getDnwSmsCode">定向流量包订购</string>
    <string name="buy_traffic">购买流量</string>
    <string name="getDnwSms_price">价格:15元(10G 限90天)</string>
    <string name="getDnwSms_explain">
              说明:\n
	（1）15元含10GB省内使用“想家视频电话”客户端的手机上网流量，流量仅限用于在“想家视频电话”客户端中收看文字、图片、视频电话等所产生的湖南省内流量；\n
	（2）套餐内“想家视频电话”上网流量和有效期任一到达则套餐使用完毕，先到为准；\n
	（3）套餐有效期90天，不可续订，未使用完流量不可结转；\n
	（4）本流量包只能抵扣订购成功后产生的指定流量，不能抵扣订购前的流量；\n
	（5）订购成功后，请数据断网重新连接一次，以确保使用的指定范围“想家视频电话”客户端上网流量纳入专属流量包；\n
	（6）本业务指定范围外的上网流量和省外漫游（含国际）产生的所流量，均按主套餐约定标准进行计费；\n
	（7）本定向流量包只适应于湖南电信C网用户；\n
	（8） 想家定向流量包订购成功后，90天有效期内无法再次订购；\n
          （9） 想家定向流量包订购成功后无法退订。\n
	</string>
	<string name="Confirm_purchase_getDnwSms">确认购买流量包</string>
    <string name="moer_surprised">更多精彩</string>
    <string name="share_friend">分享给朋友</string>
    <string name="Read_and_agree">已阅读并同意</string>
    <string name="about">关于</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_number">请输入手机号码</string>
    <string name="eightAndNineNumber">请输入8或9加手机号码</string>
    <string name="remark">温馨提示:拨打电视输入8加手机号码,拨打手机输入9加手机号码</string>
    <string name="nine_phone">请输入9加手机号码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="head">头像</string>
    <string name="more">更多</string>
    <string name="dial">拨号</string>
    <string name="swtich_video">切换摄像头</string>
    <string name="swtich_call">切换至语音</string>
    <string name="negeren">拒接</string>
    <string name="answer">接听</string>
    <string name="mute">静音</string>
    <string name="end_call">结束通话</string>
    <string name="hands_free">免提</string>
    <string name="call_keyboard">拨号盘</string>
    <string name="videoRec_start">开始录像</string>
    <string name="videoRec_stop">停止录像</string>
    <string name="audioRec_start">开始录音</string>
    <string name="audioRec_pause">暂停录音</string>
    <string name="audioRec_resume">重开录音</string>
    <string name="audioRec_stop">停止录音</string>
    <string name="name">姓名</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="xin">*</string>
    <string name="jin">#</string>
    <string name="Number">号码</string>
    <string name="PhoneNumber">电话号码</string>
    <string name="call_type">通话类型</string>
    <string name="calltype">通话状态</string>
    <string name="call_time">00:00</string>
    <string name="Contact_List">手机通讯录</string>
    <string name="not_contacts">你现在还没有想家联系人哦</string>
    <string name="not_contacts2">您的手机通讯录为空哦\n可能是关闭了想家访问通讯录的权限,请在\n“设置->权限管理->应用->想家->信任此应用</string>
    <string name="detail">详情</string>
    <string name="delete_contat">删除联系人</string>
    <string name="login_out">退出登录</string>
    <string name="nothing_found">没搜到结果</string>
    <string name="finish">进入</string>
    <string name="new_friends">新的朋友</string>
    <string name="phone_contacts">手机通讯录</string>
    <string name="look_home">手机看家</string>
    <string name="feedback">反馈</string>
    <string name="feedback_toservice">如果您愿意上传运行日志帮助我们解决问题，请点击下面按钮</string>
    <string name="check_update">检查更新</string>
    <string name="TOS">服务条款</string>
    <string name="release_date">发布日期:2016年12月</string>
    <string name="company_name">© 中国电信股份有限公司湖南分公司</string>
    <string name="company_name2"></string>
    <string name="all_right_reserved">保留最终解释权</string>
    <string name="choice_STB">选择机顶盒</string>
    <string name="coming_ssoon">敬请期待</string>
    <string name="soft_update_cancel">取消</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_tomorrow">暂不提醒</string>
    <string name="soft_update_info">检测到新版本，立即更新吗?</string>
    <string name="soft_update_title">软件更新</string>
    <string name="share">分享</string>
    <string name="user_details">个人信息</string>
    <string name="not_newfriends">没有发现新的朋友</string>
    <string name="crop__saving" translatable="false">保存图片… </string>
    <string name="crop__wait" translatable="false">请等待… </string>
    <string name="crop__pick_error" translatable="false">没有可用的源图像 </string>
    <string name="crop__done" translatable="false">确认</string>
    <string name="crop__cancel" translatable="false">取消</string>
	<string-array name="audioRecArray">
	    <item >CALL AUDIO SOURCE MIC</item>
	    <item >CALL AUDIO SOURCE HORN</item>
	    <item >CALL AUDIO SOURCE MIXED</item>
	    <item >CALL AUDIO SOURCE STEREO</item>
	</string-array>
</resources>