<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroup_back"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/LightSeaGreen" >

        <Button
            android:id="@+id/buyTraffic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/button_arrowback_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/buy_traffic"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <com.vunke.sharehome.utils.MyScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/getDnwSmsCode"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/getDnwSms_price"
                android:textColor="@color/LightSeaGreen"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buyTraffic_commit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button_login_shape"
                android:text="@string/Confirm_purchase_getDnwSms"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getDnwSms_explain"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </com.vunke.sharehome.utils.MyScrollView>

</LinearLayout>