<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait" >

    <RelativeLayout
        android:id="@+id/callvideo_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/callvideo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/swtich_video1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/button_cameraswitch_selector"
                android:text="@string/swtich_video"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/callvideo_PhoneName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textColor="@color/LightSeaGreen"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/callvideo_phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/callvideo_PhoneName"
                android:layout_centerHorizontal="true"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textColor="@color/LightSeaGreen"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/callvideo_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/calltype"
            android:textColor="@color/LightSeaGreen"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/callvideo_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/call_time"
            android:textColor="@color/LightSeaGreen"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/callvideo_linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

      
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/callvideo_switch_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/button_callswitch_selector"
                android:text="@string/swtich_call"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/callvideo_callKeyboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/call_keyboard"
                android:text="@string/call_keyboard"
                android:textColor="@color/white"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/callvideo_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/button_mute_selector"
                android:text="@string/mute"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/callvideo_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/button_callcancel_selector"
                android:text="@string/end_call"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/callvideo_handsfree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/button_handsfree_selector"
                android:text="@string/hands_free"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>