<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/LightSeaGreen" >

        <Button
            android:id="@+id/about_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_arrowback_selector"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:background="@color/white"
	    android:padding="20dp">
	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/welcome4"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:padding="20dp"
	    android:orientation="vertical">
	    <TextView
	        android:id="@+id/app_version"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/grey2"/>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/grey2"
	        android:text="@string/release_date"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/horizontal_lines">
	</LinearLayout>
	<RelativeLayout 
	    android:id="@+id/about_feedback"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/layout_pressed_selector"
	    android:orientation="horizontal">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:textColor="@color/black"
	         android:textSize="16sp"
	        android:layout_centerVertical="true"
	        android:text="@string/feedback"/>
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:padding="10dp"
	        android:background="@drawable/arrow_right"/>
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/horizontal_lines">
	</LinearLayout>
	<RelativeLayout 
	    android:id="@+id/about_check_update"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="@drawable/layout_pressed_selector">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	         android:textSize="16sp"
	        android:textColor="@color/black"
	        android:layout_centerVertical="true"
	        android:text="@string/check_update"/>
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:padding="10dp"
	        android:background="@drawable/arrow_right"/>
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/horizontal_lines">
	</LinearLayout>
	<RelativeLayout 
	    android:id="@+id/about_tos"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="@drawable/layout_pressed_selector">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:textColor="@color/black"
	         android:textSize="16sp"
	        android:layout_centerVertical="true"
	        android:text="@string/TOS"/>
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:padding="10dp"
	        android:background="@drawable/arrow_right"/>
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/horizontal_lines">
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"
	    android:background="@color/white"
	    android:padding="20dp"
	    android:gravity="center"
	    android:orientation="vertical">

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/company_name2"
	        android:textSize="12sp" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	         android:textSize="12sp"
	        android:text="@string/all_right_reserved"/>
	</LinearLayout>
</LinearLayout>