<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroup_back"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/LightSeaGreen" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forgetpassword"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/forgetpassword_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/button_arrowback_selector" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/register_username" />

        <EditText
            android:id="@+id/forgetPW_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/pleaseInput_phoneNumber"
            android:inputType="number"
            android:singleLine="true" />

        <Button
            android:id="@+id/clear_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/clear"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/backgroup_back" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/register_verificationcode" />

        <EditText
            android:id="@+id/forgetPW_verificationCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ems="7"
            android:hint="@string/pleaseInput_verificationCode"
            android:inputType="number"
            android:singleLine="true" />

        <Button
            android:id="@+id/clear_verificationcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/clear"
            android:visibility="invisible" />

        <Button
            android:id="@+id/forgetPW_getcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_getcode_selector"
            android:text="@string/TestGetCode"
            android:textColor="@color/white" />
    </LinearLayout>

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/forgetPW_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_login_shape2"
            android:text="@string/commit"
            android:enabled="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>